--- a/GTXSite.html
+++ b/GTXSite.html
@@ -1,6 +1,17 @@
-<button onclick="shiftstart()">Start Shift</button>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <button onclick="shiftstart()">Start Shift</button>
 <button onclick="report()">Report</button>
 <button onclick="shiftend()">Shift End</button>
 <button onclick="GTX()">test</button>
 <div id="display">
 </div>
+</body>
+</html>
+
